# allboard

./: README.md  notebook.py  pyproject.toml
print/: test_magnet1_cutout.3mf
src/allboard/: __init__.py  constants.py  cq_utils.py  utils.py
src/allboard/parts/: bolt1.py  bolt1_cutout.py  central_pcb.py  central_pcb_screw.py  central_pcb_spacer.py  cluster.py  cluster_key_down.py  cluster_key_down_base.py  cluster_key_down_base_cutout.py  cluster_key_short.py  cluster_key_tall.py  example.py  key_center.py  key_down.py  key_short.py  key_tall.py  led.py  led_cutout.py  magnet1.py  magnet1_cutout.py  mainboard.py  mainboard_screw.py  mainboard_spacer.py  nut1.py  test_magnet1_cutout.py  thumb_cluster_right.py  thumb_key_down.py  thumb_key_down_base_cutout.py  thumb_key_inner.py  thumb_key_mode.py  thumb_key_outer_lower.py  thumb_key_outer_upper.py  vertical_key.py  vertical_key_base.py  vertical_key_base_cutout.py  vertical_key_post.py  vertical_key_well_cutout.py
