[project]
name = "allboard"
version = "0.1.0"
description = "allboard"
authors = [
    { name = "wirekang", email = "wirekang@gmail.com" }
]
dependencies = [
    "pip>=24.2",
    "cadquery>=2.4.0",
    "ipykernel>=6.29.5",
    "jupyter-console>=6.6.3",
    "ocp-tessellate>=3.0.4",
    "ocp-vscode>=2.4.1",
    "numpy<2",
    "black>=24.8.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/allboard"]

[project.scripts]
export = "allboard:export"
